[project]
name = "voice-anonymization-fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=2.14.4",
    "speechbrain>=1.1.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "ruff>=0.15.12",
]

[tool.uv]
environments = [
    "platform_system == 'Windows'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-xpu" }]
torchvision = [{ index = "pytorch-xpu" }]
torchaudio = [{ index = "pytorch-xpu" }]
triton-xpu = [{ index = "pytorch-xpu" }]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Add B later
select = ["E", "F", "I"]
# Skip unused import rules (`F401`).
# Skip unused variable rules (`F841`).
ignore = ["F401", "F841"]

[tool.ruff.format]
line-ending = "native"
quote-style = "single"
indent-style = "space"
docstring-code-format = true
