[project]
name = "voice-anonymization-fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=2.14.4",
    "flair>=0.15.1",
    "huggingface-hub>=0.36.2",
    "k2==1.24.4.dev20260423+cpu.torch2.11.0",
    "numpy>=2.4.3",
    "speechbrain>=1.1.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.1",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "ruff>=0.15.12",
]

[tool.uv]
environments = [
    "platform_system == 'Windows'",
]
find-links = ["https://k2-fsa.github.io/k2/cpu.html"]

[tool.uv.sources]
torch = [{ index = "pytorch-xpu" }]
torchvision = [{ index = "pytorch-xpu" }]
torchaudio = [{ index = "pytorch-xpu" }]
triton-xpu = [{ index = "pytorch-xpu" }]
speechbrain = { git = "https://github.com/speechbrain/speechbrain.git" }

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Add B later
select = ["E", "F", "I"]
# Skip unused import rules (`F401`).
# Skip unused variable rules (`F841`).
ignore = ["F401", "F841"]

[tool.ruff.format]
line-ending = "native"
quote-style = "single"
indent-style = "space"
docstring-code-format = true
