[project]
name = "voice-anonymization-fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=2.14.4",
    "flair>=0.15.1",
    "huggingface-hub>=0.36.2",
    "k2==1.24.4.dev20260423+cuda13.0.torch2.11.0 ; platform_system == 'Linux'",
    "k2==1.24.4.dev20260423+cpu.torch2.11.0 ; platform_system == 'Windows'",
    "numpy>=2.4.3",
    "speechbrain>=1.1.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.1",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
    "transformers>=4.57.6",
    "triton-xpu>=3.7.0 ; platform_system == 'Windows'",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "ruff>=0.15.12",
]

[tool.uv]
environments = [
    "platform_system == 'Linux' and platform_machine == 'x86_64'",
    "platform_system == 'Windows'",
]
find-links = [
    "https://k2-fsa.github.io/k2/cuda.html",
    "https://k2-fsa.github.io/k2/cpu.html",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "platform_system == 'Linux'" },
    { index = "pytorch-xpu", marker = "platform_system == 'Windows'" }
]
torchvision = [
    { index = "pytorch-cuda", marker = "platform_system == 'Linux'" },
    { index = "pytorch-xpu", marker = "platform_system == 'Windows'" }
]
torchaudio = [
    { index = "pytorch-cuda", marker = "platform_system == 'Linux'" },
    { index = "pytorch-xpu", marker = "platform_system == 'Windows'" }
]
triton-xpu = [
    { index = "pytorch-xpu", marker = "platform_system == 'Windows'" }
]
speechbrain = { git = "https://github.com/speechbrain/speechbrain.git" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Skip unused import rules (`F401`).
ignore = ["F401"]

[tool.ruff.format]
line-ending = "native"
quote-style = "single"
indent-style = "space"
docstring-code-format = true
